Add .Dotless.sc glyphs [RFS-698]

--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -778,6 +778,8 @@
   <string>C_yS_mB_yelorusU_krainI_.glif</string>
   <key>CySmByelorusUkrainI.Dotless</key>
   <string>C_yS_mB_yelorusU_krainI_.D_otless.glif</string>
+  <key>CySmByelorusUkrainI.Dotless.sc</key>
+  <string>C_yS_mB_yelorusU_krainI_.D_otless.sc.glif</string>
   <key>CySmByelorusUkrainI.sc</key>
   <string>C_yS_mB_yelorusU_krainI_.sc.glif</string>
   <key>CySmCapEl</key>
@@ -1020,6 +1022,8 @@
   <string>C_yS_mJ_e.glif</string>
   <key>CySmJe.Dotless</key>
   <string>C_yS_mJ_e.D_otless.glif</string>
+  <key>CySmJe.Dotless.sc</key>
+  <string>C_yS_mJ_e.D_otless.sc.glif</string>
   <key>CySmJe.sc</key>
   <string>C_yS_mJ_e.sc.glif</string>
   <key>CySmKa</key>
@@ -4150,6 +4154,8 @@
   <string>L_tnS_mI_D_otA_bv.sc.glif</string>
   <key>LtnSmIDotBlw</key>
   <string>L_tnS_mI_D_otB_lw.glif</string>
+  <key>LtnSmIDotBlw.Dotless.sc</key>
+  <string>L_tnS_mI_D_otB_lw.D_otless.sc.glif</string>
   <key>LtnSmIDotBlw.SItal</key>
   <string>L_tnS_mI_D_otB_lw.S_I_tal.glif</string>
   <key>LtnSmIDotBlw.sc</key>
@@ -4198,6 +4204,8 @@
   <string>L_tnS_mI_S_trk.glif</string>
   <key>LtnSmIStrk.Dotless</key>
   <string>L_tnS_mI_S_trk.D_otless.glif</string>
+  <key>LtnSmIStrk.Dotless.sc</key>
+  <string>L_tnS_mI_S_trk.D_otless.sc.glif</string>
   <key>LtnSmIStrk.sc</key>
   <string>L_tnS_mI_S_trk.sc.glif</string>
   <key>LtnSmIStrkRetrHook</key>
@@ -4256,6 +4264,8 @@
   <string>L_tnS_mJ_.glif</string>
   <key>LtnSmJ.Dotless</key>
   <string>L_tnS_mJ_.D_otless.glif</string>
+  <key>LtnSmJ.Dotless.sc</key>
+  <string>L_tnS_mJ_.D_otless.sc.glif</string>
   <key>LtnSmJ.sc</key>
   <string>L_tnS_mJ_.sc.glif</string>
   <key>LtnSmJCaron</key>
@@ -4268,12 +4278,16 @@
   <string>L_tnS_mJ_C_rossedT_ail.glif</string>
   <key>LtnSmJCrossedTail.Dotless</key>
   <string>L_tnS_mJ_C_rossedT_ail.D_otless.glif</string>
+  <key>LtnSmJCrossedTail.Dotless.sc</key>
+  <string>L_tnS_mJ_C_rossedT_ail.D_otless.sc.glif</string>
   <key>LtnSmJCrossedTail.sc</key>
   <string>L_tnS_mJ_C_rossedT_ail.sc.glif</string>
   <key>LtnSmJStrk</key>
   <string>L_tnS_mJ_S_trk.glif</string>
   <key>LtnSmJStrk.Dotless</key>
   <string>L_tnS_mJ_S_trk.D_otless.glif</string>
+  <key>LtnSmJStrk.Dotless.sc</key>
+  <string>L_tnS_mJ_S_trk.D_otless.sc.glif</string>
   <key>LtnSmJStrk.sc</key>
   <string>L_tnS_mJ_S_trk.sc.glif</string>
   <key>LtnSmJStrkDep</key>
