Add missing ss_name to ss07 [nobuild]

--- a/source/featureinfo.yaml
+++ b/source/featureinfo.yaml
@@ -1464,6 +1464,7 @@
 - tag: ss07
   fonts: G
   version_added: 5
+  ss_name: Low-profile diacritics
   tt_tag: LpDiacs
   tt_name: Low-profile diacritics
   tt_value: Standard
