--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -2998,6 +2998,7 @@
     <string>CySmE.sc</string>
     <string>CySmEDiaer.sc</string>
     <string>CySmE.MongolStyle.sc</string>
+    <string>LtnSmCPalHook.sc</string>
     <string>LtnSmD.sc</string>
     <string>CySmKomiDe.sc</string>
     <string>CySmKomiDje.sc</string>
@@ -3406,6 +3407,7 @@
     <string>LtnSmSharpS.sc</string>
     <string>LtnSmTnTwo.sc</string>
     <string>LtnSmEsh.sc</string>
+    <string>LtnSmSHook.sc</string>
     <string>LtnSmT.sc</string>
     <string>LtnSmTCaron.Caron.sc</string>
     <string>LtnSmTDotAbv.sc</string>
@@ -7183,6 +7185,8 @@
     <string>uni0188.sc</string>
     <key>LtnSmCPalHook</key>
     <string>uniA794</string>
+    <key>LtnSmCPalHook.sc</key>
+    <string>uniA7C4.sc</string>
     <key>LtnSmCPalHookDep</key>
     <string>uniF225</string>
     <key>LtnSmCRetrHook</key>
@@ -8847,6 +8851,8 @@
     <string>uni1E69.sc</string>
     <key>LtnSmSHook</key>
     <string>uni0282</string>
+    <key>LtnSmSHook.sc</key>
+    <string>uniA7C5.sc</string>
     <key>LtnSmSMiddleTilde</key>
     <string>uni1D74</string>
     <key>LtnSmSMiddleTildeDep</key>
