--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11,7 +11,7 @@
   <string>3112</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>/LtnCapZPalHook c/LtnSmCPalHook C/LtnCapCPalHook/LtnSmSHook S/LtnCapSHook</string>
+    <string>o/CySmHardSgn o/CySmElTail bvd/LtnSmTnSix boH/LtnCapTnSix H/CyCapHardSgn H</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
@@ -909,6 +909,7 @@
     <string>CySmGhe</string>
     <string>CySmGhe.Serb</string>
     <string>CySmGje</string>
+    <string>CySmGje.Serb</string>
     <string>CySmGheUpturn</string>
     <string>CySmGheDesc</string>
     <string>CySmGheStrk</string>
@@ -4718,6 +4719,8 @@
     <string>uni0491.sc</string>
     <key>CySmGje</key>
     <string>uni0453</string>
+    <key>CySmGje.Serb</key>
+    <string>uni0453.Serb</string>
     <key>CySmGje.sc</key>
     <string>uni0453.sc</string>
     <key>CySmHa</key>
