--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -597,12 +597,15 @@
     <string>CySmBe</string>
     <string>CySmBe.Serb</string>
     <string>CySmSoftSgn</string>
+    <string>CySmSoftSgn.Bulg</string>
     <string>CySmSemisoftSgn</string>
     <string>CySmHardSgn</string>
+    <string>CySmHardSgn.Bulg</string>
     <string>CySmYat</string>
     <string>CySmYeru</string>
     <string>CySmYeruDiaer</string>
     <string>CySmVe</string>
+    <string>CySmVe.Bulg</string>
     <string>CyCapVe</string>
     <string>ModCapB</string>
     <string>LtnSmCapB</string>
@@ -829,6 +832,7 @@
     <string>CySmZeDesc</string>
     <string>CySmKomiDzje</string>
     <string>CySmKomiZje</string>
+    <string>CySmZe.Bulg</string>
     <string>CyCapIe</string>
     <string>ModCapE</string>
     <string>LtnSmCapE</string>
@@ -949,6 +953,7 @@
     <string>LtnSmG.SngBowl</string>
     <string>LtnSmScriptG</string>
     <string>LtnSupSmScriptG</string>
+    <string>CySmDe.Bulg</string>
     <string>LtnSmGAcute.SngBowl</string>
     <string>LtnSmGCircum.SngBowl</string>
     <string>LtnSmGBreve.SngBowl</string>
@@ -1027,6 +1032,7 @@
     <string>CySmEnLftHook</string>
     <string>CySmKomiNje</string>
     <string>CySmEnMiddleHook</string>
+    <string>CySmEn.Bulg</string>
     <string>CySmPe</string>
     <string>CySmPe.Serb</string>
     <string>CySmPeDesc</string>
@@ -1202,6 +1208,7 @@
     <string>CySmDe</string>
     <string>CySmDe.Serb</string>
     <string>CySmDeZheLig</string>
+    <string>CySmEl.Bulg</string>
     <string>CySmLha</string>
     <string>CyCapJe</string>
     <string>ModCapJ</string>
@@ -1218,9 +1225,11 @@
     <string>CyCapElHook</string>
     <string>CyCapKomiLje</string>
     <string>CyCapElMiddleHook</string>
+    <string>CyCapEl.Bulg</string>
     <string>CyCapLha</string>
     <string>CyCapDe</string>
     <string>CyCapDeZheLig</string>
+    <string>CyCapDe.Bulg</string>
     <string>LtnSubSmK</string>
     <string>LtnSupSmK</string>
     <string>LtnSmKAcute</string>
@@ -1237,6 +1246,8 @@
     <string>LtnSmKDesc</string>
     <string>LtnSmTurnedK</string>
     <string>LtnSmRevK</string>
+    <string>CySmKa.Bulg</string>
+    <string>CySmZhe.Bulg</string>
     <string>LtnSmKra</string>
     <string>CySmKa</string>
     <string>CySmKje</string>
@@ -1275,10 +1286,12 @@
     <string>CyCapKaVertStrk</string>
     <string>CyCapKaHook</string>
     <string>CyCapAleutKa</string>
+    <string>CyCapKa.Bulg</string>
     <string>CyCapZhe</string>
     <string>CyCapZheBreve</string>
     <string>CyCapZheDiaer</string>
     <string>CyCapZheDesc</string>
+    <string>CyCapZhe.Bulg</string>
     <string>LtnSmL.SItal</string>
     <string>SmRomNumFifty</string>
     <string>LtnSubSmL</string>
@@ -1324,6 +1337,7 @@
     <string>LtnSmLZDigraph</string>
     <string>LtnSmLezh</string>
     <string>LtnSmLezhRetrHook</string>
+    <string>CySmYu.Bulg</string>
     <string>LtrScriptSmL</string>
     <string>GermanPennySgn</string>
     <string>LiraSgn</string>
@@ -1367,8 +1381,11 @@
     <string>LtnSmMum</string>
     <string>LtnSmMHook</string>
     <string>ModSmMHook</string>
+    <string>CySmTe.Bulg</string>
     <string>LtnSmTurnedM</string>
     <string>LtnSupSmTurnedM</string>
+    <string>CySmSha.Bulg</string>
+    <string>CySmShcha.Bulg</string>
     <string>LtnSmTurnedMLngLeg</string>
     <string>LtnSupSmTurnedMLngLeg</string>
     <string>LtnSmSdwysTrndM</string>
@@ -1420,6 +1437,7 @@
     <string>LtnSmNDesc</string>
     <string>LtnSmNLngRtLeg</string>
     <string>LtnSmNj</string>
+    <string>CySmPe.Bulg</string>
     <string>CySmI</string>
     <string>CySmIGrave</string>
     <string>CySmShortI</string>
@@ -1458,6 +1476,9 @@
     <string>CyCapShortITail</string>
     <string>CyCapIDiaer</string>
     <string>CyCapIMacron</string>
+    <string>CyCapI.Bulg</string>
+    <string>CyCapIGrave.Bulg</string>
+    <string>CyCapShortI.Bulg</string>
     <string>CySmO</string>
     <string>LtnSubSmO</string>
     <string>LtnSupSmO</string>
@@ -1616,6 +1637,7 @@
     <string>LtnSmPhi</string>
     <string>ModSmPhi</string>
     <string>CySmEf</string>
+    <string>CySmEf.Bulg</string>
     <string>GrSmPhi</string>
     <string>GrSubSmPhi</string>
     <string>ModSmGrPhi</string>
@@ -1644,6 +1666,7 @@
     <string>MathFrktCapP</string>
     <string>LtnCapRevP</string>
     <string>CyCapEf</string>
+    <string>CyCapEf.Bulg</string>
     <string>CySmQa</string>
     <string>LtnSmQStrk</string>
     <string>LtnSmQDiagStrk</string>
@@ -1750,6 +1773,7 @@
     <string>LtnSmSCurl</string>
     <string>LtnSmSSwashTail</string>
     <string>LtnSmTnTwo</string>
+    <string>CySmGhe.Bulg</string>
     <string>LtnSmEsh</string>
     <string>LtnSupSmEsh</string>
     <string>LtnSmEshHook</string>
@@ -1876,6 +1900,10 @@
     <string>LtnSmUHornTilde</string>
     <string>LtnSmUHornHookAbv</string>
     <string>LtnSmUHornDotBlw</string>
+    <string>CySmI.Bulg</string>
+    <string>CySmIGrave.Bulg</string>
+    <string>CySmShortI.Bulg</string>
+    <string>CySmTse.Bulg</string>
     <string>LtnSmUe</string>
     <string>LtnSmSdwysU</string>
     <string>ModSmSdwysU</string>
@@ -2064,6 +2092,7 @@
     <string>CySmCheDesc</string>
     <string>CySmKhakasChe</string>
     <string>CySmDeCheLig</string>
+    <string>CySmChe.Bulg</string>
     <string>CyCapStraightU</string>
     <string>LtnSmCapY</string>
     <string>LtnSupSmCapY</string>
@@ -3109,6 +3138,7 @@
     <string>LtnSmGDiagStrk.SngBowl.sc</string>
     <string>LtnSmG.SngBowl.sc</string>
     <string>LtnSmScriptG.sc</string>
+    <string>CySmDe.Bulg.sc</string>
     <string>LtnSmGAcute.SngBowl.sc</string>
     <string>LtnSmGCircum.SngBowl.sc</string>
     <string>LtnSmGBreve.SngBowl.sc</string>
@@ -3210,6 +3240,7 @@
     <string>CySmLha.sc</string>
     <string>CySmDe.sc</string>
     <string>CySmDeZheLig.sc</string>
+    <string>CySmEl.Bulg.sc</string>
     <string>LtnSmK.sc</string>
     <string>LtnSmKAcute.sc</string>
     <string>LtnSmKCaron.sc</string>
@@ -3235,6 +3266,8 @@
     <string>CySmZheBreve.sc</string>
     <string>CySmZheDiaer.sc</string>
     <string>CySmZheDesc.sc</string>
+    <string>CySmKa.Bulg.sc</string>
+    <string>CySmZhe.Bulg.sc</string>
     <string>LtnSmL.sc</string>
     <string>LtnSmLAcute.sc</string>
     <string>LtnSmLCaron.sc</string>
@@ -3291,6 +3324,9 @@
     <string>CySmIDiaer.sc</string>
     <string>CySmShortITail.sc</string>
     <string>LtnCapNSmJ.sc</string>
+    <string>CySmI.Bulg.sc</string>
+    <string>CySmIGrave.Bulg.sc</string>
+    <string>CySmShortI.Bulg.sc</string>
     <string>LtnSmO.sc</string>
     <string>CySmO.sc</string>
     <string>LtnSmOAcute.sc</string>
@@ -3367,6 +3403,7 @@
     <string>CySmRha.sc</string>
     <string>LtnWynn.sc</string>
     <string>CySmEf.sc</string>
+    <string>CySmEf.Bulg.sc</string>
     <string>LtnSmQ.sc</string>
     <string>CySmQa.sc</string>
     <string>LtnSmQStrk.sc</string>
@@ -4239,6 +4276,8 @@
     <string>uni04B8</string>
     <key>CyCapDe</key>
     <string>uni0414</string>
+    <key>CyCapDe.Bulg</key>
+    <string>uni0414.Bulg</string>
     <key>CyCapDeCheLig</key>
     <string>uni052C</string>
     <key>CyCapDeZheLig</key>
@@ -4257,8 +4296,12 @@
     <string>uni04EC</string>
     <key>CyCapEf</key>
     <string>uni0424</string>
+    <key>CyCapEf.Bulg</key>
+    <string>uni0424.Bulg</string>
     <key>CyCapEl</key>
     <string>uni041B</string>
+    <key>CyCapEl.Bulg</key>
+    <string>uni041B.Bulg</string>
     <key>CyCapElDesc</key>
     <string>uni052E</string>
     <key>CyCapElHook</key>
@@ -4329,10 +4372,14 @@
     <string>uni042A</string>
     <key>CyCapI</key>
     <string>uni0418</string>
+    <key>CyCapI.Bulg</key>
+    <string>uni0418.Bulg</string>
     <key>CyCapIDiaer</key>
     <string>uni04E4</string>
     <key>CyCapIGrave</key>
     <string>uni040D</string>
+    <key>CyCapIGrave.Bulg</key>
+    <string>uni040D.Bulg</string>
     <key>CyCapIMacron</key>
     <string>uni04E2</string>
     <key>CyCapIe</key>
@@ -4349,6 +4396,8 @@
     <string>uni0408</string>
     <key>CyCapKa</key>
     <string>uni041A</string>
+    <key>CyCapKa.Bulg</key>
+    <string>uni041A.Bulg</string>
     <key>CyCapKaDesc</key>
     <string>uni049A</string>
     <key>CyCapKaHook</key>
@@ -4425,6 +4474,8 @@
     <string>uniF32C</string>
     <key>CyCapShortI</key>
     <string>uni0419</string>
+    <key>CyCapShortI.Bulg</key>
+    <string>uni0419.Bulg</string>
     <key>CyCapShortITail</key>
     <string>uni048A</string>
     <key>CyCapShortU</key>
@@ -4479,6 +4530,8 @@
     <string>uni04DE</string>
     <key>CyCapZhe</key>
     <string>uni0416</string>
+    <key>CyCapZhe.Bulg</key>
+    <string>uni0416.Bulg</string>
     <key>CyCapZheBreve</key>
     <string>uni04C1</string>
     <key>CyCapZheDesc</key>
@@ -4555,6 +4608,8 @@
     <string>uni1D2B</string>
     <key>CySmChe</key>
     <string>uni0447</string>
+    <key>CySmChe.Bulg</key>
+    <string>uni0447.Bulg</string>
     <key>CySmChe.sc</key>
     <string>uni0447.sc</string>
     <key>CySmCheDesc</key>
@@ -4571,6 +4626,10 @@
     <string>uni04B9.sc</string>
     <key>CySmDe</key>
     <string>uni0434</string>
+    <key>CySmDe.Bulg</key>
+    <string>uni0434.Bulg</string>
+    <key>CySmDe.Bulg.sc</key>
+    <string>uni0434.Bulg.sc</string>
     <key>CySmDe.Serb</key>
     <string>uni0434.Serb</string>
     <key>CySmDe.sc</key>
@@ -4609,10 +4668,18 @@
     <string>uni04ED.sc</string>
     <key>CySmEf</key>
     <string>uni0444</string>
+    <key>CySmEf.Bulg</key>
+    <string>uni0444.Bulg</string>
+    <key>CySmEf.Bulg.sc</key>
+    <string>uni0424.Bulg.sc</string>
     <key>CySmEf.sc</key>
     <string>uni0444.sc</string>
     <key>CySmEl</key>
     <string>uni043B</string>
+    <key>CySmEl.Bulg</key>
+    <string>uni043B.Bulg</string>
+    <key>CySmEl.Bulg.sc</key>
+    <string>uni043B.Bulg.sc</string>
     <key>CySmEl.sc</key>
     <string>uni043B.sc</string>
     <key>CySmElDesc</key>
@@ -4643,6 +4710,8 @@
     <string>uni04CE.sc</string>
     <key>CySmEn</key>
     <string>uni043D</string>
+    <key>CySmEn.Bulg</key>
+    <string>uni043D.Bulg</string>
     <key>CySmEn.sc</key>
     <string>uni043D.sc</string>
     <key>CySmEnDesc</key>
@@ -4687,6 +4756,8 @@
     <string>uni0473.sc</string>
     <key>CySmGhe</key>
     <string>uni0433</string>
+    <key>CySmGhe.Bulg</key>
+    <string>uni0433.Bulg</string>
     <key>CySmGhe.Serb</key>
     <string>uni0433.Serb</string>
     <key>CySmGhe.sc</key>
@@ -4751,10 +4822,16 @@
     <string>uniF329</string>
     <key>CySmHardSgn</key>
     <string>uni044A</string>
+    <key>CySmHardSgn.Bulg</key>
+    <string>uni044A.Bulg</string>
     <key>CySmHardSgn.sc</key>
     <string>uni044A.sc</string>
     <key>CySmI</key>
     <string>uni0438</string>
+    <key>CySmI.Bulg</key>
+    <string>uni0438.Bulg</string>
+    <key>CySmI.Bulg.sc</key>
+    <string>uni0438.Bulg.sc</string>
     <key>CySmI.sc</key>
     <string>uni0438.sc</string>
     <key>CySmIDiaer</key>
@@ -4763,6 +4840,10 @@
     <string>uni04E5.sc</string>
     <key>CySmIGrave</key>
     <string>uni045D</string>
+    <key>CySmIGrave.Bulg</key>
+    <string>uni045D.Bulg</string>
+    <key>CySmIGrave.Bulg.sc</key>
+    <string>uni045D.Bulg.sc</string>
     <key>CySmIGrave.sc</key>
     <string>uni045D.sc</string>
     <key>CySmIMacron</key>
@@ -4799,6 +4880,10 @@
     <string>uni0458.sc</string>
     <key>CySmKa</key>
     <string>uni043A</string>
+    <key>CySmKa.Bulg</key>
+    <string>uni043A.Bulg</string>
+    <key>CySmKa.Bulg.sc</key>
+    <string>uni043A.Bulg.sc</string>
     <key>CySmKa.sc</key>
     <string>uni043A.sc</string>
     <key>CySmKaDesc</key>
@@ -4893,6 +4978,8 @@
     <string>uni04CF</string>
     <key>CySmPe</key>
     <string>uni043F</string>
+    <key>CySmPe.Bulg</key>
+    <string>uni043F.Bulg</string>
     <key>CySmPe.Serb</key>
     <string>uni043F.Serb</string>
     <key>CySmPe.sc</key>
@@ -4933,10 +5020,14 @@
     <string>uni048D.sc</string>
     <key>CySmSha</key>
     <string>uni0448</string>
+    <key>CySmSha.Bulg</key>
+    <string>uni0448.Bulg</string>
     <key>CySmSha.sc</key>
     <string>uni0448.sc</string>
     <key>CySmShcha</key>
     <string>uni0449</string>
+    <key>CySmShcha.Bulg</key>
+    <string>uni0449.Bulg</string>
     <key>CySmShcha.sc</key>
     <string>uni0449.sc</string>
     <key>CySmShha</key>
@@ -4953,6 +5044,10 @@
     <string>uniF32D</string>
     <key>CySmShortI</key>
     <string>uni0439</string>
+    <key>CySmShortI.Bulg</key>
+    <string>uni0439.Bulg</string>
+    <key>CySmShortI.Bulg.sc</key>
+    <string>uni0439.Bulg.sc</string>
     <key>CySmShortI.sc</key>
     <string>uni0439.sc</string>
     <key>CySmShortITail</key>
@@ -4965,6 +5060,8 @@
     <string>uni045E.sc</string>
     <key>CySmSoftSgn</key>
     <string>uni044C</string>
+    <key>CySmSoftSgn.Bulg</key>
+    <string>uni044C.Bulg</string>
     <key>CySmSoftSgn.sc</key>
     <string>uni044C.sc</string>
     <key>CySmStraightU</key>
@@ -4977,6 +5074,8 @@
     <string>uni04B1.sc</string>
     <key>CySmTe</key>
     <string>uni0442</string>
+    <key>CySmTe.Bulg</key>
+    <string>uni0442.Bulg</string>
     <key>CySmTe.Serb</key>
     <string>uni0442.Serb</string>
     <key>CySmTe.sc</key>
@@ -4987,6 +5086,8 @@
     <string>uni04AD.sc</string>
     <key>CySmTse</key>
     <string>uni0446</string>
+    <key>CySmTse.Bulg</key>
+    <string>uni0446.Bulg</string>
     <key>CySmTse.sc</key>
     <string>uni0446.sc</string>
     <key>CySmTshe</key>
@@ -5015,6 +5116,8 @@
     <string>uni0454.sc</string>
     <key>CySmVe</key>
     <string>uni0432</string>
+    <key>CySmVe.Bulg</key>
+    <string>uni0432.Bulg</string>
     <key>CySmVe.sc</key>
     <string>uni0432.sc</string>
     <key>CySmWe</key>
@@ -5047,10 +5150,14 @@
     <string>uni0457.sc</string>
     <key>CySmYu</key>
     <string>uni044E</string>
+    <key>CySmYu.Bulg</key>
+    <string>uni044E.Bulg</string>
     <key>CySmYu.sc</key>
     <string>uni044E.sc</string>
     <key>CySmZe</key>
     <string>uni0437</string>
+    <key>CySmZe.Bulg</key>
+    <string>uni0437.Bulg</string>
     <key>CySmZe.sc</key>
     <string>uni0437.sc</string>
     <key>CySmZeDesc</key>
@@ -5063,6 +5170,10 @@
     <string>uni04DF.sc</string>
     <key>CySmZhe</key>
     <string>uni0436</string>
+    <key>CySmZhe.Bulg</key>
+    <string>uni0436.Bulg</string>
+    <key>CySmZhe.Bulg.sc</key>
+    <string>uni0436.Bulg.sc</string>
     <key>CySmZhe.sc</key>
     <string>uni0436.sc</string>
     <key>CySmZheBreve</key>
