Fix typo in feature description

--- a/source/featureinfo.yaml
+++ b/source/featureinfo.yaml
@@ -605,7 +605,7 @@
   fonts: CDGA
   version_added: 5
   cv_label: Lowercase p hook
-  cv_tooltip: Alternate form of lowercae p hook with hook on right
+  cv_tooltip: Alternate form of lowercase p hook with hook on right
   cv_sample: 
   tt_tag: SmPHk
   tt_name: Lowercase p hook
