--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11,7 +11,7 @@
   <string>3134</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>r/LtnSmTurnedRMiddleTilde m/ModLftTack/ModYangDepartingToneMrk</string>
+    <string>/LtnSmTurnedRMiddleTilde lm/ModLftTack/ModYangDepartingToneMrk/LtnSmYOgonek/LtnSmYOgonek.RetroHook/LtnSmUOgonek.RetroHook</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
