--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11,7 +11,7 @@
   <string>3134</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>/LtnSmTsHook o/LtnSmTurnedRMiddleTilde olm/ModLftTack/ModYangDepartingToneMrk/LtnSmYOgonek/LtnSmYOgonek.RetroHook/LtnSmUOgonek.RetroHook</string>
+    <string>/LtnSmEgAlef áå/LtnSmAHookAbv/LtnSmAEgAlef.SngStory/LtnSmAEgAlef/LtnSmIEgAlef/LtnSmUEgAlef H/LtnCapAEgAlef H/LtnCapIEgAlef T/LtnCapUEgAlef</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
