--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -2191,36 +2191,46 @@
     <string>LariSgn</string>
     <string>SomSgn</string>
     <string>SubZero</string>
+    <string>DigitZero.dnom</string>
     <string>SupZero</string>
     <string>SubOne</string>
+    <string>DigitOne.dnom</string>
     <string>SupOne</string>
     <string>SubTwo</string>
+    <string>DigitTwo.dnom</string>
     <string>SupTwo</string>
     <string>LtnTwoStrk</string>
     <string>TurnedDigitTwo</string>
     <string>VulgFracZeroThirds</string>
     <string>SubThree</string>
+    <string>DigitThree.dnom</string>
     <string>SupThree</string>
     <string>TurnedDigitThree</string>
     <string>SubFour</string>
+    <string>DigitFour.dnom</string>
     <string>SupFour</string>
     <string>LtnCapCuatrillo</string>
     <string>LtnCapCuatrilloComma</string>
     <string>LtnSmCuatrillo</string>
     <string>LtnSmCuatrilloComma</string>
     <string>SubFive</string>
+    <string>DigitFive.dnom</string>
     <string>SupFive</string>
     <string>LtnCapTnFive</string>
     <string>LtnSmTnFive</string>
     <string>SubSix</string>
+    <string>DigitSix.dnom</string>
     <string>SupSix</string>
     <string>LtnSmOpenSix</string>
     <string>LtnCapOpenSix</string>
     <string>SubSeven</string>
+    <string>DigitSeven.dnom</string>
     <string>SupSeven</string>
     <string>SubEight</string>
+    <string>DigitEight.dnom</string>
     <string>SupEight</string>
     <string>SubNine</string>
+    <string>DigitNine.dnom</string>
     <string>SupNine</string>
     <string>LtnCapOpenNine</string>
     <string>LtnSmOpenNine</string>
@@ -2244,6 +2254,7 @@
     <string>VulgFracFiveSixths</string>
     <string>VulgFracFiveEighths</string>
     <string>VulgFracSevenEighths</string>
+    <string>FracSlash.frac</string>
     <string>PerTenThousandSgn</string>
     <string>Interrobang</string>
     <string>LtnRetrClick</string>
@@ -2277,10 +2288,18 @@
     <string>HyphenationPt</string>
     <string>BulletOperator</string>
     <string>LtnSinolDot</string>
+    <string>CombLftParenBlw</string>
     <string>SubLftParen</string>
     <string>SupLftParen</string>
+    <string>CombLftParenAbv</string>
+    <string>CombRtParenBlw</string>
     <string>SubRtParen</string>
     <string>SupRtParen</string>
+    <string>CombRtParenAbv</string>
+    <string>CombParensBlw</string>
+    <string>CombParensAbv</string>
+    <string>CombDblParensAbv</string>
+    <string>CombSqBracketsAbv</string>
     <string>MathLftWhiteSqrBrac</string>
     <string>MathRtWhiteSqrBrac</string>
     <string>SqrTxtBracHighLft</string>
@@ -2342,6 +2361,7 @@
     <string>ModLowVertLine</string>
     <string>ModVertLine</string>
     <string>MeasuredAngle</string>
+    <string>DblSolidus</string>
     <string>CombShortSolidusOverlay</string>
     <string>CombLngSolidusOverlay</string>
     <string>CombLngReverseSolidusOverlay</string>
@@ -2546,6 +2566,7 @@
     <string>ModLftTack</string>
     <string>CombRtTackBlw</string>
     <string>ModYangDepartingToneMrk</string>
+    <string>ModRtTack</string>
     <string>ModYinDepartingTnMrk</string>
     <string>CombLftAngBlw</string>
     <string>CombLftAngAbv</string>
@@ -3986,6 +4007,8 @@
     <string>uni1AB8</string>
     <key>CombDblOverline</key>
     <string>uni033F</string>
+    <key>CombDblParensAbv</key>
+    <string>uni1ABC</string>
     <key>CombDblPlusSgnAbv</key>
     <string>uni1AC9</string>
     <key>CombDblPlusSgnBlw</key>
@@ -4086,6 +4109,10 @@
     <string>uni031C</string>
     <key>CombLftHarpoonBarbDwnBlw</key>
     <string>uni20ED</string>
+    <key>CombLftParenAbv</key>
+    <string>uni1AC1</string>
+    <key>CombLftParenBlw</key>
+    <string>uni1AC3</string>
     <key>CombLftRtArrwBlw</key>
     <string>uni034D</string>
     <key>CombLftTackBlw</key>
@@ -4166,6 +4193,10 @@
     <string>uni0305</string>
     <key>CombPalHook</key>
     <string>uni0321</string>
+    <key>CombParensAbv</key>
+    <string>uni1ABB</string>
+    <key>CombParensBlw</key>
+    <string>uni1ABD</string>
     <key>CombPlusSgnBlw</key>
     <string>uni031F</string>
     <key>CombRetrHook</key>
@@ -4194,6 +4225,10 @@
     <string>uni0339</string>
     <key>CombRtHarpoonBarbDwnBlw</key>
     <string>uni20EC</string>
+    <key>CombRtParenAbv</key>
+    <string>uni1AC2</string>
+    <key>CombRtParenBlw</key>
+    <string>uni1AC4</string>
     <key>CombRtTackBlw</key>
     <string>uni0319</string>
     <key>CombSeagullBlw</key>
@@ -4206,6 +4241,8 @@
     <string>uni1DC2</string>
     <key>CombSnakeBlwDep</key>
     <string>uniF170</string>
+    <key>CombSqBracketsAbv</key>
+    <string>uni1AC5</string>
     <key>CombSqrBlw</key>
     <string>uni033B</string>
     <key>CombStrongCentralizationStrkBlw</key>
@@ -5154,6 +5191,8 @@
     <string>underscoredbl</string>
     <key>DblPrime</key>
     <string>second</string>
+    <key>DblSolidus</key>
+    <string>uni2AFD</string>
     <key>DblVertLine</key>
     <string>uni2016</string>
     <key>DegreeSgn</key>
@@ -5164,42 +5203,62 @@
     <string>eight</string>
     <key>DigitEight.Sophia</key>
     <string>compDigitEight</string>
+    <key>DigitEight.dnom</key>
+    <string>eight.dnom</string>
     <key>DigitFive</key>
     <string>five</string>
     <key>DigitFive.Sophia</key>
     <string>compDigitFive</string>
+    <key>DigitFive.dnom</key>
+    <string>five.dnom</string>
     <key>DigitFour</key>
     <string>four</string>
     <key>DigitFour.Sophia</key>
     <string>compDigitFour</string>
+    <key>DigitFour.dnom</key>
+    <string>four.dnom</string>
     <key>DigitNine</key>
     <string>nine</string>
     <key>DigitNine.Sophia</key>
     <string>compDigitNine</string>
+    <key>DigitNine.dnom</key>
+    <string>nine.dnom</string>
     <key>DigitOne</key>
     <string>one</string>
     <key>DigitOne.Sophia</key>
     <string>compDigitOne</string>
+    <key>DigitOne.dnom</key>
+    <string>one.dnom</string>
     <key>DigitSeven</key>
     <string>seven</string>
     <key>DigitSeven.Sophia</key>
     <string>compDigitSeven</string>
+    <key>DigitSeven.dnom</key>
+    <string>seven.dnom</string>
     <key>DigitSix</key>
     <string>six</string>
     <key>DigitSix.Sophia</key>
     <string>compDigitSix</string>
+    <key>DigitSix.dnom</key>
+    <string>six.dnom</string>
     <key>DigitThree</key>
     <string>three</string>
     <key>DigitThree.Sophia</key>
     <string>compDigitThree</string>
+    <key>DigitThree.dnom</key>
+    <string>three.dnom</string>
     <key>DigitTwo</key>
     <string>two</string>
     <key>DigitTwo.Sophia</key>
     <string>compDigitTwo</string>
+    <key>DigitTwo.dnom</key>
+    <string>two.dnom</string>
     <key>DigitZero</key>
     <string>zero</string>
     <key>DigitZero.Sophia</key>
     <string>compDigitZero</string>
+    <key>DigitZero.dnom</key>
+    <string>zero.dnom</string>
     <key>DivSgn</key>
     <string>divide</string>
     <key>DollarSgn</key>
@@ -5310,6 +5369,8 @@
     <string>uni215F</string>
     <key>FracSlash</key>
     <string>fraction</string>
+    <key>FracSlash.frac</key>
+    <string>fraction.frac</string>
     <key>FrenchFrancSgn</key>
     <string>franc</string>
     <key>FullStop</key>
@@ -10110,6 +10171,8 @@
     <string>uni02C3</string>
     <key>ModRtHalfRing</key>
     <string>uni02BE</string>
+    <key>ModRtTack</key>
+    <string>uniAB6B</string>
     <key>ModShelf</key>
     <string>uni02FD</string>
     <key>ModShortEqSgn</key>
