[RFS-870] Revised DblAngleBrac chars to make stroke weights consistent with singles; also made amount of compression consistent with Andika

--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -32,7 +32,7 @@
   <string>3151</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>/EnDash -/MetricalBreve/MetricalLongShort/MetricalShortLong/MetricalShortShort/MetricalLongShortShort/MetricalShortShortLong</string>
+    <string>/MathLftAngBrac/MathRtAngBrac/LftDblParen h/RtDblParen/MathLftDblAngleBrac O/MathRtDblAngleBrac</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
